Started on mobile layout, fixed general css to be more responsive, fixed super weird picture bug

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -16,6 +16,8 @@ $home-image: url(../img/background.jpg);
 $background-opacity: 0.7;
 $max-width: 1200px;
 
+$footer-height: 2.5rem;
+
 $header-font: "Work Sans", sans-serif;
 $body-font: "Lato", sans-serif;
 
@@ -41,6 +43,30 @@ $body-font: "Lato", sans-serif;
     @return $black;
   } @else {
     @return $white;
+  }
+}
+// Media query mixins
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
+}
+
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mediaLg {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @content;
+  }
+}
+
+@mixin mediaXl {
+  @media screen and (min-width: 1171px) {
+    @content;
   }
 }
 
