--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -23,6 +23,8 @@ body {
   background-color: $background-color;
   color: $black;
   font-family: $body-font;
+  position: relative;
+  min-height: 100vh;
 }
 
 h1,
@@ -95,8 +97,9 @@ i {
 
     .nav-logo {
       background-color: $background-color;
-      padding: 0.4rem 0.8rem;
-      margin-right: 1rem;
+      @include centered;
+      // padding: 0.4rem 0.8rem;
+      // margin-right: 1rem;
     }
 
     .nav-link {
@@ -148,16 +151,20 @@ i {
 .landing {
   position: relative;
   // background: url("../img/practise-photo.jpg") no-repeat center center/cover;
-  height: 65vh;
-  overflow: hidden;
+  // height: 60vh;
+  // overflow: hidden;
   // height: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 4fr;
-  margin: 0 2rem;
+  // display: grid;
+  // grid-template-columns: 1fr 1fr;
+  // grid-template-rows: 1fr 4fr;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: $footer-height;
+  // margin: 0 2rem;
+  width: 100%;
 
   &-header {
-    grid-column: span 2;
+    // grid-column: span 2;
     padding: 0.5rem 1rem;
     display: flex;
     flex-direction: column;
@@ -167,30 +174,49 @@ i {
     @include set-background(rgba($background-color, 0.8));
   }
 
+  &-main {
+    display: flex;
+    @include centered;
+    flex-direction: row;
+    // align-items: stretch;
+    // overflow: scroll;
+  }
+
   &-content {
-    margin-left: 4rem;
+    margin-left: 1rem;
     @include centered;
     display: flex;
     flex-direction: column;
     vertical-align: middle;
+    width: 50%;
+    height: 100%;
   }
 
   &-image {
-    @include centered;
-    display: flex;
-    vertical-align: middle;
+    width: 50%;
+    height: 100%;
+    // @include centered;
+    // justify-content: center;
+    // display: flex;
+    // vertical-align: middle;
+    // justify-content: start;
     .border {
-      display: grid;
-      @include centered;
-      height: 80%;
+      // display: contents;
+      // @include centered;
+      padding: 0 2rem;
+      // height: 40vh;
+      // width: 80%;
+      // height: 50%;
       // padding-top: 2rem;
       img {
-        float: left;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+          0 6px 20px 0 rgba(0, 0, 0, 0.19);
         display: block;
         border: 4px $primary-color solid;
-        width: auto;
+        width: 100%;
+        object-fit: cover;
         // border-radius: 2rem;
-        height: 100%;
+        height: auto;
         margin: 0;
         padding: 0;
       }
@@ -262,51 +288,55 @@ i {
   }
 }
 
-#main-footer {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  margin-top: 2rem;
-  width: 100%;
-  padding: 1rem 3rem;
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  align-items: center;
-  justify-content: space-between;
+footer {
+  height: $footer-height;
+  #main-footer {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    // margin-top: 2rem;
+    width: 100%;
+    padding: 0.5rem 3rem;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: center;
+    justify-content: space-between;
 
-  @include set-background($background-color);
-  // height: 60px;
-  height: 10vh;
-  color: $primary-color;
-  .footer-caa {
-    @include centered;
-    text-align: right;
-    img {
-      color: $primary-color;
-      // position: relative;
-      height: 5vh;
-    }
-  }
-
-  .footer-text {
-    a {
-      &:hover {
-        color: $light-color;
-        @include easeOut;
+    // @include set-background($background-color);
+    // height: 60px;
+    // height: 10vh;
+    color: $primary-color;
+    .footer-caa {
+      @include centered;
+      text-align: right;
+      img {
+        color: $primary-color;
+        // position: relative;
+        height: 5vh;
       }
     }
-  }
 
-  .footer-fb {
-    text-align: left;
-    a {
-      font-size: 4vh;
-      color: $primary-color;
-      @include easeOut;
-      &:hover {
-        color: $light-color;
+    .footer-text {
+      a {
+        &:hover {
+          color: $light-color;
+          @include easeOut;
+        }
+      }
+    }
+
+    .footer-fb {
+      text-align: left;
+      a {
+        font-size: 4vh;
+        color: $primary-color;
+        @include easeOut;
+        &:hover {
+          color: $light-color;
+        }
       }
     }
   }
 }
+
+@import "mobile";
